# vrx_description

./: README.md  package.xml
config/: sensor_config.xacro  sensor_config.yaml
launch/: view.launch
launch/config/: ouxt_wamv.rviz
urdf/: ouxt_wamv.urdf
