<?xml version="1.0"?>
<package format="2">
  <name>vrx_description</name>
  <version>0.0.0</version>
  <description>The vrx_description package</description>

  <maintainer email="ryodo@todo.todo">ryodo</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>uuv_simulator</build_depend>
  <exec_depend>uuv_simulator</exec_depend>
  <build_export_depend>uuv_simulator</build_export_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
